show abstracts of posts

--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,9 @@ remote_theme: jekyll/minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  
+show_excerpts: true # from theme minima 
+excerpt_separator: <!--more-->
 
 # Exclude from processing.
 # The following items will not be processed, by default.
